# ComfyUI-Prompt-Preset-Selector

./: README.md  README_ja.md  __init__.py  gitignore  nodes.py  pyproject.toml
presets/: camera_angles.txt  example.txt  sample_dict.yaml  sample_flat.yaml  sample_list.yaml  sample_spaces.yaml
