[project]
name = "comfyui-prompt-preset-selector"
description = "Flexible preset selector with YAML support, advanced keyword filtering, and hierarchical key search"
version = "1.0.2"
license = {file = "LICENSE"}

classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
]

[project.urls]
Repository = "https://github.com/shin131002/ComfyUI-Prompt-Preset-Selector"

[tool.comfy]
PublisherId = "konohana"
DisplayName = "Prompt Preset Selector"
Icon = ""
